force-app/main/default/objects/Conga_Metadata_Batch__c/Conga_Metadata_Batch__c.object-meta.xml
<CustomObject>
    <label>Conga Metadata Batch</label>
    <nameField>
        <label>Conga Batch Processing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Metadata Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>