force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Conga_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Conga_Email_CC__c</fullName>
    <label>Conga Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>