force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>