force-app/main/default/objects/Conga_Metadata_Batch__c/fields/fileName__c.field-meta.xml
<CustomField>
    <fullName>fileName__c</fullName>
    <label>fileName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>