force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Last_Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date_Time__c</fullName>
    <label>Last Run Date Time</label>
    <type>DateTime</type>
</CustomField>