force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Merge_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Merge_Record_Id__c</fullName>
    <label>Merge Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>