force-app/main/default/objects/Conga_Metadata_Batch__c/fields/queryAliasId__c.field-meta.xml
<CustomField>
    <fullName>queryAliasId__c</fullName>
    <label>queryAliasId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>