force-app/main/default/objects/Conga_Metadata_Batch__c/fields/queryId__c.field-meta.xml
<CustomField>
    <fullName>queryId__c</fullName>
    <label>queryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>