force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Run_Second_Job__c.field-meta.xml
<CustomField>
    <fullName>Run_Second_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Second Job?</label>
    <type>Checkbox</type>
</CustomField>