force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Second_Alias_Id__c.field-meta.xml
<CustomField>
    <fullName>Second_Alias_Id__c</fullName>
    <label>Second Alias Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>