force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Second_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_File_Name__c</fullName>
    <label>Second File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>