force-app/main/default/objects/Conga_Metadata_Batch__c/fields/Second_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Second_Template_ID__c</fullName>
    <label>Second Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>