force-app/main/default/objects/Conga_Metadata_Batch__c/fields/templateId__c.field-meta.xml
<CustomField>
    <fullName>templateId__c</fullName>
    <label>templateId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>