force-app/main/default/objects/Conga_Metadata_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Subject__c</columns>
    <columns>fileName__c</columns>
    <columns>Conga_Email_CC__c</columns>
    <columns>Last_Run_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>